[gd_scene load_steps=4 format=3 uid="uid://c8k9m2n3p4q5r"]

[ext_resource type="Script" uid="uid://d7h8i9j0k1l2m" path="res://Weapons/projectile.gd" id="1_projectile"]

[sub_resource type="CircleShape2D" id="CircleShape2D_1"]
radius = 4.0

[sub_resource type="CircleShape2D" id="CircleShape2D_2"]
radius = 6.0

[node name="Projectile" type="CharacterBody2D" groups=["projectile"]]
collision_layer = 16
collision_mask = 0
script = ExtResource("1_projectile")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(1, 1, 0, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_1")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 4

[node name="AreaCollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_2")

[node name="LifetimeTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="LifetimeTimer" to="." method="_on_lifetime_timer_timeout"]